--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -5,74 +5,13 @@
 @inject NavigationManager NavigationManager
 @inject MeetupService MeetupService
 
-<h1>Meetup Planner</h1>
-
-
-<br/>
 <p>
     <button class="btn btn-primary" @onclick="CreateNew">Crea nuovo Meetup</button>
 </p>
 <br/>
-@if (upcomingMeetups?.Count() > 0)
-{
-    <h3>I prossimi meetup in calendario</h3>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Summary</th>
-                <th>Speaker</th>
-                <th>Attendees</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var meetup in upcomingMeetups)
-            {
-                <tr>
-                    <td>@meetup.Date.ToString()</td>
-                    <td>@meetup.Summary</td>
-                    <td>@meetup.Speaker</td>
-                    <td>@meetup.Attendees.Count</td>
-                    <td>
-    <button class="btn btn-primary" @onclick="(() => Details(meetup))">dettagli</button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+<MeetupList Title="I prossimi meetup in calendario" Meetups="@upcomingMeetups" />
 <br/>
-@if (pastMeetups?.Count() > 0)
-{
-    <h3>I meetup passati</h3>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Summary</th>
-                <th>Speaker</th>
-                <th>Attendees</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var meetup in pastMeetups)
-            {
-                <tr>
-                    <td>@meetup.Date.ToString()</td>
-                    <td>@meetup.Summary</td>
-                    <td>@meetup.Speaker</td>
-                    <td>@meetup.Attendees.Count</td>
-                    <td>
-    <button class="btn btn-primary" @onclick="(() => Details(meetup))">dettagli</button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-
+<MeetupList Title="I meeting passati" Meetups="@pastMeetups" />
 
 @code {
     Meetup[] upcomingMeetups;
@@ -80,17 +19,12 @@
 
     protected override async Task OnInitializedAsync()
     {
-        upcomingMeetups = await MeetupService.GetForecastAsync(DateTime.Now);
-        pastMeetups = await MeetupService.GetPastMeetupAsync(DateTime.Now);
+        upcomingMeetups = await MeetupService.GetUpcomingMeetupsAsync(DateTime.Now);
+        pastMeetups = await MeetupService.GetPastMeetupsAsync(DateTime.Now);
     }
 
     void CreateNew()
     {
         NavigationManager.NavigateTo("/NewMeetup");
-    }
-
-    void Details(Meetup meetup)
-    {
-        NavigationManager.NavigateTo($"/Details/{meetup.Id.ToString()}");
     }
 }
