--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -17,11 +17,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Nuovo Meetup
             </NavLink>
         </li>
-        <!-- <li class="nav-item px-3">
-            <NavLink class="nav-link" href="">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="AllMeetups">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Elenco Meetup
             </NavLink>
-        </li> -->
+        </li>
     </ul>
 </div>
 
